add new tests and merge new section to appendix

--- a/output/abccarecnlsy_invariance_si30y_inc_trans_pub_smale.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_trans_pub_smale.tex
@@ -1,17 +1,15 @@
-% matrix: allsi30y_inc_trans_pub_smale file: abccarecnlsy_invariance_si30y_inc_trans_pub_smale.tex  11 Oct 2016 12:01:59
-\begin{table}[htbp]
-\begin{tabular}{lcccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S & -9163.289 &     0.970 & -1.09e+04 &     0.840 & -9183.792 &     0.970 & -1.01e+04 &     0.805 \\  
-Mother'sEducation &  1079.304 &     0.060 &  1780.950 &     0.125 &  1357.454 &     0.100 &  2589.214 &     0.120 \\  
-PIAT(5-7) &         . &         . &         . &         . &  -231.170 &     0.740 &   134.292 &     0.230 \\  
-Education(30) &         . &         . &         . &         . &   -94.621 &     0.585 &     8.667 &     0.495 \\  
-LaborIncome(21) &         . &         . &         . &         . &     0.078 &     0.340 &    -0.115 &     0.935 \\  
-Cognitive &         . &         . & -1522.362 &     0.895 &         . &         . & -2681.798 &     0.880 \\  
-NonCognitive &         . &         . &   219.476 &     0.330 &         . &         . &   179.781 &     0.360 \\  
-Constant & -1768.141 &     0.585 & -7509.722 &     0.810 & 17402.359 &     0.330 & -2.79e+04 &     0.770 \\  
-F-stat &     1.740 &         . &     0.682 &         . &     1.050 &         . &     0.530 &         . \\  
-R2 &     0.012 &         . &     0.058 &         . &     0.019 &         . &     0.095 &         . \\  
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+S & -9,163.289 &     0.970 & -10,900.00 &     0.840 & -9,183.792 &     0.970 & -10,100.00 &     0.805 \\  
+Mother's Education &  1,079.304 &     0.060 &  1,780.950 &     0.125 &  1,357.454 &     0.100 &  2,589.214 &     0.120 \\  
+PIAT (5-7) &         . &         . &         . &         . &  -231.170 &     0.740 &   134.292 &     0.230 \\  
+Education (30) &         . &         . &         . &         . &   -94.621 &     0.585 &     8.667 &     0.495 \\  
+Labor Income (21) &         . &         . &         . &         . &     0.078 &     0.340 &    -0.115 &     0.935 \\  
+Cognitive &         . &         . & -1,522.362 &     0.895 &         . &         . & -2,681.798 &     0.880 \\  
+Non Cognitive &         . &         . &   219.476 &     0.330 &         . &         . &   179.781 &     0.360 \\  
+Constant & -1,768.141 &     0.585 & -7,509.722 &     0.810 & 17,402.359 &     0.330 & -27,900.00 &     0.770 \\  \\ \midrule
+$F$-stat &     1.740 &         . &     0.682 &         . &     1.050 &         . &     0.530 &         . \\  
+$R^2$ &     0.012 &         . &     0.058 &         . &     0.019 &         . &     0.095 &         . \\  
 Observations &   201.000 &         . &    79.000 &         . &   200.000 &         . &   203.000 &         . \\  
-\hline \hline \end{tabular}
-\end{table}
+\bottomrule  \end{tabular}
