--- a/output/abccarecnlsy_invariance_si30y_inc_labor_sfemale.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_labor_sfemale.tex
@@ -1,17 +1,15 @@
-% matrix: allsi30y_inc_labor_sfemale file: abccarecnlsy_invariance_si30y_inc_labor_sfemale.tex  11 Oct 2016 12:02:28
-\begin{table}[htbp]
-\begin{tabular}{lcccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S &  4396.848 &     0.060 &  2292.980 &     0.250 &   456.565 &     0.410 &   539.899 &     0.445 \\  
-Mother'sEducation &   289.800 &     0.400 & -1253.548 &     0.800 & -1878.064 &     0.985 & -2126.096 &     0.960 \\  
-PIAT(5-7) &         . &         . &         . &         . &   207.361 &     0.090 &   221.599 &     0.215 \\  
-Education(30) &         . &         . &         . &         . &  3381.137 &     0.000 &  3652.225 &     0.000 \\  
-LaborIncome(21) &         . &         . &         . &         . &     0.345 &     0.020 &     0.366 &     0.050 \\  
-Cognitive &         . &         . &  4078.844 &     0.055 &         . &         . & -1479.220 &     0.670 \\  
-NonCognitive &         . &         . & -1370.089 &     0.640 &         . &         . &  2229.399 &     0.195 \\  
-Constant & 17358.422 &     0.100 & 33633.047 &     0.030 & -2.51e+04 &     0.960 & -2.74e+04 &     0.840 \\  
-F-stat &     1.924 &         . &     2.882 &         . &    13.153 &         . &     9.163 &         . \\  
-R2 &     0.022 &         . &     0.106 &         . &     0.279 &         . &     0.312 &         . \\  
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+S &  4,396.848 &     0.060 &  2,292.980 &     0.250 &   456.565 &     0.410 &   539.899 &     0.445 \\  
+Mother's Education &   289.800 &     0.400 & -1253.548 &     0.800 & -1878.064 &     0.985 & -2,126.096 &     0.960 \\  
+PIAT (5-7) &         . &         . &         . &         . &   207.361 &     0.090 &   221.599 &     0.215 \\  
+Education (30) &         . &         . &         . &         . &  3381.137 &     0.000 &  3652.225 &     0.000 \\  
+Labor Income (21) &         . &         . &         . &         . &     0.345 &     0.020 &     0.366 &     0.050 \\  
+Cognitive &         . &         . &  4,078.844 &     0.055 &         . &         . & -,1479.220 &     0.670 \\  
+Non Cognitive &         . &         . & -1370.089 &     0.640 &         . &         . &  2229.399 &     0.195 \\  
+Constant & 1,7358.422 &     0.100 & 33,633.047 &     0.030 & -25,100.00 &     0.960 & -27,400.00 &     0.840 \\  \\ \midrule
+$F$-stat &     1.924 &         . &     2.882 &         . &    13.153 &         . &     9.163 &         . \\  
+$R^2$ &     0.022 &         . &     0.106 &         . &     0.279 &         . &     0.312 &         . \\  
 Observations &   382.000 &         . &   128.000 &         . &   380.000 &         . &   385.000 &         . \\  
-\hline \hline \end{tabular}
-\end{table}
+\bottomrule \end{tabular}
