--- a/output/abccarecnlsy_invariance_si30y_inc_labor_smale.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_labor_smale.tex
@@ -1,17 +1,15 @@
-% matrix: allsi30y_inc_labor_smale file: abccarecnlsy_invariance_si30y_inc_labor_smale.tex  11 Oct 2016 12:01:45
-\begin{table}[htbp]
-\begin{tabular}{lcccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
 S & 17984.393 &     0.010 & 21406.389 &     0.015 &  4864.750 &     0.260 &  3301.140 &     0.305 \\  
-Mother'sEducation &  4182.211 &     0.035 &  2885.837 &     0.295 &  1991.183 &     0.150 &  3960.881 &     0.210 \\  
-PIAT(5-7) &         . &         . &         . &         . &    13.463 &     0.480 &   608.659 &     0.210 \\  
-Education(30) &         . &         . &         . &         . & 11855.479 &     0.000 & 18995.199 &     0.010 \\  
-LaborIncome(21) &         . &         . &         . &         . &     0.289 &     0.165 &     0.243 &     0.260 \\  
-Cognitive &         . &         . &  5012.976 &     0.205 &         . &         . & -1498.498 &     0.560 \\  
-NonCognitive &         . &         . &  6902.538 &     0.115 &         . &         . &  6335.481 &     0.070 \\  
-Constant & -2.33e+04 &     0.805 & -1.13e+04 &     0.575 & -1.50e+05 &     0.985 & -3.18e+05 &     0.965 \\  
-F-stat &     4.333 &         . &     2.187 &         . &     9.588 &         . &     8.790 &         . \\  
-R2 &     0.059 &         . &     0.087 &         . &     0.283 &         . &     0.403 &         . \\  
+Mother's Education &  4,182.211 &     0.035 &  2,885.837 &     0.295 &  1,991.183 &     0.150 &  3,960.881 &     0.210 \\  
+PIAT (5-7) &         . &         . &         . &         . &    13.463 &     0.480 &   608.659 &     0.210 \\  
+Education (30) &         . &         . &         . &         . & 11,855.479 &     0.000 & 18,995.199 &     0.010 \\  
+Labo rIncome (21) &         . &         . &         . &         . &     0.289 &     0.165 &     0.243 &     0.260 \\  
+Cognitive &         . &         . &  5,012.976 &     0.205 &         . &         . & -1498.498 &     0.560 \\  
+Non Cognitive &         . &         . &  6,902.538 &     0.115 &         . &         . &  6,335.481 &     0.070 \\  
+Constant & -23,300.00 &     0.805 & -1.13e+04 &     0.575 & -1.50e+05 &     0.985 & -318,000.00 &     0.965 \\ \\ \midrule  
+$F$-stat &     4.333 &         . &     2.187 &         . &     9.588 &         . &     8.790 &         . \\  
+$R^2$ &     0.059 &         . &     0.087 &         . &     0.283 &         . &     0.403 &         . \\  
 Observations &   312.000 &         . &   102.000 &         . &   310.000 &         . &   315.000 &         . \\  
-\hline \hline \end{tabular}
-\end{table}
+\bottomrule \end{tabular}
