--- a/output/abccarecnlsy_invariance_si30y_inc_labor_spooled.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_labor_spooled.tex
@@ -1,17 +1,15 @@
-% matrix: allsi30y_inc_labor_spooled file: abccarecnlsy_invariance_si30y_inc_labor_spooled.tex  11 Oct 2016 12:03:15
-\begin{table}[htbp]
-\begin{tabular}{lcccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S & 11498.463 &     0.000 & 11043.829 &     0.010 &  6285.941 &     0.105 &  6632.177 &     0.110 \\  
-Mother'sEducation &  2394.895 &     0.030 &  1627.280 &     0.270 &   405.729 &     0.415 &   940.857 &     0.395 \\  
-PIAT(5-7) &         . &         . &         . &         . &   -67.827 &     0.605 &  -325.077 &     0.755 \\  
-Education(30) &         . &         . &         . &         . &  6784.374 &     0.000 &  8756.174 &     0.000 \\  
-LaborIncome(21) &         . &         . &         . &         . &     0.299 &     0.085 &     0.261 &     0.225 \\  
-Cognitive &         . &         . &  4083.211 &     0.095 &         . &         . &  1965.443 &     0.300 \\  
-NonCognitive &         . &         . &  1550.587 &     0.280 &         . &         . &  5528.127 &     0.015 \\  
-Constant & -4882.177 &     0.620 &  3299.631 &     0.465 & -6.54e+04 &     1.000 & -7.08e+04 &     0.915 \\  
-F-stat &     4.606 &         . &     2.226 &         . &    12.713 &         . &     5.861 &         . \\  
-R2 &     0.033 &         . &     0.040 &         . &     0.191 &         . &     0.227 &         . \\  
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+S & 11498.463 &     0.000 & 11,043.829 &     0.010 &  6285.941 &     0.105 &  6632.177 &     0.110 \\  
+Mother's Education &  2,394.895 &     0.030 &  1,627.280 &     0.270 &   405.729 &     0.415 &   940.857 &     0.395 \\  
+PIAT (5-7) &         . &         . &         . &         . &   -67.827 &     0.605 &  -325.077 &     0.755 \\  
+Education (30) &         . &         . &         . &         . &  6784.374 &     0.000 &  8756.174 &     0.000 \\  
+Labor Income (21) &         . &         . &         . &         . &     0.299 &     0.085 &     0.261 &     0.225 \\  
+Cognitive &         . &         . &  4,083.211 &     0.095 &         . &         . &  1,965.443 &     0.300 \\  
+Non Cognitive &         . &         . &  1,550.587 &     0.280 &         . &         . &  5,528.127 &     0.015 \\  
+Constant & -4,882.177 &     0.620 &  3,299.631 &     0.465 & -65,400.00 &     1.000 & -70,800.00 &     0.915 \\ \\ \midrule  
+$F$-stat &     4.606 &         . &     2.226 &         . &    12.713 &         . &     5.861 &         . \\  
+$R^2$ &     0.033 &         . &     0.040 &         . &     0.191 &         . &     0.227 &         . \\  
 Observations &   695.000 &         . &   233.000 &         . &   695.000 &         . &   693.000 &         . \\  
-\hline \hline \end{tabular}
-\end{table}
+\bottomrule \end{tabular}
