--- a/output/abccarecnlsy_invariance_si30y_inc_trans_pub_spooled.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_trans_pub_spooled.tex
@@ -1,17 +1,15 @@
-% matrix: allsi30y_inc_trans_pub_spooled file: abccarecnlsy_invariance_si30y_inc_trans_pub_spooled.tex  11 Oct 2016 12:03:31
-\begin{table}[htbp]
-\begin{tabular}{lcccccccc} \hline \hline
- & t1completemean  & t1completepvalue  & t1fcompletemean  & t1fcompletepvalue  & t2completemean  & t2completepvalue  & t2fcompletemean  & t2fcompletepvalue  \\  \hline 
-S & -1.95e+04 &     1.000 & -3.99e+04 &     0.995 & -1.80e+04 &     1.000 & -3.78e+04 &     0.995 \\  
-Mother'sEducation &   421.201 &     0.260 &  1157.790 &     0.200 &  1166.099 &     0.120 &  2689.898 &     0.055 \\  
-PIAT(5-7) &         . &         . &         . &         . &  -149.284 &     0.795 &  -619.090 &     0.900 \\  
-Education(30) &         . &         . &         . &         . & -1551.360 &     0.970 & -1917.391 &     0.945 \\  
-LaborIncome(21) &         . &         . &         . &         . &    -0.143 &     0.830 &    -0.445 &     0.980 \\  
-Cognitive &         . &         . & -1985.907 &     0.945 &         . &         . &  3830.170 &     0.220 \\  
-NonCognitive &         . &         . &  2773.079 &     0.065 &         . &         . &  1839.751 &     0.180 \\  
-Constant & 17150.666 &     0.030 & 29991.990 &     0.040 & 44047.305 &     0.055 &  1.02e+05 &     0.040 \\  
-F-stat &     4.296 &         . &     1.730 &         . &     2.227 &         . &     1.132 &         . \\  
-R2 &     0.021 &         . &     0.050 &         . &     0.025 &         . &     0.065 &         . \\  
+\begin{tabular}{lcccccccc} \toprule
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
+S & -19,500.00 &     1.000 & -39,900.00 &     0.995 & -18,000.00 &     1.000 & -37,800.00 &     0.995 \\  
+Mother's Education &   421.201 &     0.260 &  1,157.790 &     0.200 &  1,166.099 &     0.120 &  2,689.898 &     0.055 \\  
+PIAT (5-7) &         . &         . &         . &         . &  -149.284 &     0.795 &  -619.090 &     0.900 \\  
+Education (30) &         . &         . &         . &         . & -1,551.360 &     0.970 & -1,917.391 &     0.945 \\  
+Labor Income (21) &         . &         . &         . &         . &    -0.143 &     0.830 &    -0.445 &     0.980 \\  
+Cognitive &         . &         . & -1,985.907 &     0.945 &         . &         . &  3,830.170 &     0.220 \\  
+Non Cognitive &         . &         . &  2,773.079 &     0.065 &         . &         . &  1,839.751 &     0.180 \\  
+Constant & 17,150.666 &     0.030 & 2,9991.990 &     0.040 & 44,047.305 &     0.055 &  102,000.00 &     0.040 \\  \\ \midrule
+$F$-stat &     4.296 &         . &     1.730 &         . &     2.227 &         . &     1.132 &         . \\  
+$R^2$ &     0.021 &         . &     0.050 &         . &     0.025 &         . &     0.065 &         . \\  
 Observations &   457.000 &         . &   183.000 &         . &   455.000 &         . &   455.000 &         . \\  
-\hline \hline \end{tabular}
-\end{table}
+\bottomrule \end{tabular}
