--- a/abc_methodologystandalone.tex
+++ b/abc_methodologystandalone.tex
@@ -224,7 +224,7 @@ We need to show that
 \end{proof}\\
 \doublespacing
 
-\noindent Summarizing, Theorem~\ref{theorem:main} states that when the dynamic relationship between $Y_{j,t}$ and $\left( \bm{X}_{t}, \bm{B} \right)$ satisfies invariance properties to (i) the ABC/CARE experiment; and (ii) to the sample source in which the relationship is fitted, and exogeneity and common support conditions are satisfied, we are able to obtain consistent out-of-sample predictions.\\
+\noindent Summarizing, Theorem~\ref{theorem:main} states that when the dynamic relationship between $Y_{j,t}$ and $\left( \bm{X}_{t}, \bm{B} \right)$ satisfies invariance properties to (i) the ABC/CARE experiment; and (ii) to the sample source in which the relationship is fitted, and exogeneity and common support conditions are satisfied, we are able to obtain consistent out-of-sample predictions.\footnote{Adding our method to account for attrition to the theorem is straightforward. See Appendix~\ref{appendix:attrition}.}\\
 
 \noindent We provide evidence favoring Assumptions~\ref{ass:invariance}, \ref{ass:invariance}, and \ref{ass:contain} in Appendix~\ref{appendix:methodology}. Assumptions~\ref{ass:exog} and ~\ref{ass:exogne} could also be violated. We explains why is it the case next, and provide tests for these latter assumptions.\\
 
