--- a/output/abccarecnlsy_invariance_si30y_inc_trans_pub_sfemale.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_trans_pub_sfemale.tex
@@ -3,13 +3,13 @@
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
 S & -25,600.00 &     0.980 & -55,400.00 &     0.960 & -23,800.00 &     0.985 & -49,200.00 &     0.955 \\  
 Mother's Education &  -100.152 &     0.520 &  1378.932 &     0.275 &  1002.227 &     0.285 &  3547.563 &     0.135 \\  
-PIAT (5-7) &         . &         . &         . &         . &  -121.313 &     0.745 & -1013.098 &     0.945 \\  
-Education (30) &         . &         . &         . &         . & -2388.872 &     0.970 & -1957.873 &     0.905 \\  
-Labor Income (21) &         . &         . &         . &         . &    -0.317 &     0.825 &    -0.843 &     0.940 \\  
-Cognitive &         . &         . & -1,974.061 &     0.850 &         . &         . &  8,384.886 &     0.110 \\  
-Non Cognitive &         . &         . &  5815.688 &     0.080 &         . &         . &  2573.675 &     0.240 \\  
+PIAT (5-7) &         &         &         &         &  -121.313 &     0.745 & -1013.098 &     0.945 \\  
+Education (30) &         &         &         &         & -2388.872 &     0.970 & -1957.873 &     0.905 \\  
+Labor Income (21) &         &         &         &         &    -0.317 &     0.825 &    -0.843 &     0.940 \\  
+Cognitive &         &         & -1,974.061 &     0.850 &         &         &  8,384.886 &     0.110 \\  
+Non Cognitive &         &         &  5815.688 &     0.080 &         &         &  2573.675 &     0.240 \\  
 Constant & 29,989.713 &     0.020 & 43,623.469 &     0.030 & 62,435.082 &     0.030 &  149,000.00 &     0.030 \\  \\ \midrule
-F-stat &     3.047 &         . &     1.287 &         . &     1.662 &         . &     1.040 &         . \\  
-R2 &     0.027 &         . &     0.066 &         . &     0.037 &         . &     0.095 &         . \\  
-Observations &   254.000 &         . &   105.000 &         . &   255.000 &         . &   252.000 &         . \\  
+F-stat &     3.047 &         &     1.287 &         &     1.662 &         &     1.040 &         \\ 
+R2 &     0.027 &         &     0.066 &         &     0.037 &         &     0.095 &         \\ 
+Observations &   254 &         &   105  &         &   255  &         &   252  &         \\ 
 \bottomrule \end{tabular}
