--- a/output/abccarecnlsy_invariance_si34y_bmi_spooled.tex
+++ b/output/abccarecnlsy_invariance_si34y_bmi_spooled.tex
@@ -1,15 +1,15 @@
 \begin{tabular}{lcccccccc} \toprule
- & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8) \\ 
+ & (1) & (2) & (3) & (4) & (5) & (6) & (7) & (8)\\  
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
 S &     4.075 &     0.000 &     4.040 &     0.000 &     4.230 &     0.000 &     3.865 &     0.010 \\  
 Mother's Education &    -0.061 &     0.585 &     0.023 &     0.485 &    -0.019 &     0.555 &    -0.096 &     0.575 \\  
-PIAT (5-7) &         . &         . &         . &         . &     0.048 &     0.200 &     0.162 &     0.070 \\  
-Education (30) &         . &         . &         . &         . &     0.026 &     0.435 &     0.123 &     0.430 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.000 &     0.385 &     0.000 &     0.200 \\  
-Cognitive &         . &         . &    -0.886 &     0.835 &         . &         . &    -1.790 &     0.950 \\  
-Non Cognitive &         . &         . &     0.763 &     0.220 &         . &         . &     0.972 &     0.180 \\  
-Constant &    30.876 &     0.000 &    30.416 &     0.000 &    25.240 &     0.000 &    13.717 &     0.170 \\  \\ \midrule
-$F$-stat &     8.871 &         . &     4.520 &         . &     4.494 &         . &     2.939 &         . \\  
-$R^2$ &     0.064 &         . &     0.091 &         . &     0.088 &         . &     0.127 &         . \\  
-Observations &   650.000 &         . &   197.000 &         . &   650.000 &         . &   651.000 &         . \\  
+PIAT (5-7) &         &         &         &         &     0.048 &     0.200 &     0.162 &     0.070 \\  
+Education (30) &         &         &         &         &     0.026 &     0.435 &     0.123 &     0.430 \\  
+Labor Income (21) &         &         &         &         &     0.000 &     0.385 &     0.000 &     0.200 \\  
+Cognitive &         &         &    -0.886 &     0.835 &         &         &    -1.790 &     0.950 \\  
+Non Cognitive &         &         &     0.763 &     0.220 &         &         &     0.972 &     0.180 \\  
+Constant &    30.876 &     0.000 &    30.416 &     0.000 &    25.240 &     0.000 &    13.717 &     0.170 \\  \midrule
+$F$-stat &     8.871 &         &     4.520 &         &     4.494 &         &     2.939 &         \\  
+$R^2$ &     0.064 &         &     0.091 &         &     0.088 &         &     0.127 &          \\  
+Observations &   650 &         &   197 &         &   650 &         &   651 &          \\  
 \midrule \end{tabular}
