--- a/output/abccarecnlsy_invariance_si30y_inc_labor_spooled.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_labor_spooled.tex
@@ -3,13 +3,13 @@
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
 S & 11498.463 &     0.000 & 11,043.829 &     0.010 &  6285.941 &     0.105 &  6632.177 &     0.110 \\  
 Mother's Education &  2,394.895 &     0.030 &  1,627.280 &     0.270 &   405.729 &     0.415 &   940.857 &     0.395 \\  
-PIAT (5-7) &         . &         . &         . &         . &   -67.827 &     0.605 &  -325.077 &     0.755 \\  
-Education (30) &         . &         . &         . &         . &  6784.374 &     0.000 &  8756.174 &     0.000 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.299 &     0.085 &     0.261 &     0.225 \\  
-Cognitive &         . &         . &  4,083.211 &     0.095 &         . &         . &  1,965.443 &     0.300 \\  
-Non Cognitive &         . &         . &  1,550.587 &     0.280 &         . &         . &  5,528.127 &     0.015 \\  
+PIAT (5-7) &         &         &         &         &   -67.827 &     0.605 &  -325.077 &     0.755 \\  
+Education (30) &         &         &         &         &  6784.374 &     0.000 &  8756.174 &     0.000 \\  
+Labor Income (21) &         &         &         &         &     0.299 &     0.085 &     0.261 &     0.225 \\  
+Cognitive &         &         &  4,083.211 &     0.095 &         &         &  1,965.443 &     0.300 \\  
+Non Cognitive &         &         &  1,550.587 &     0.280 &         &         &  5,528.127 &     0.015 \\  
 Constant & -4,882.177 &     0.620 &  3,299.631 &     0.465 & -65,400.00 &     1.000 & -70,800.00 &     0.915 \\ \\ \midrule  
-$F$-stat &     4.606 &         . &     2.226 &         . &    12.713 &         . &     5.861 &         . \\  
-$R^2$ &     0.033 &         . &     0.040 &         . &     0.191 &         . &     0.227 &         . \\  
-Observations &   695.000 &         . &   233.000 &         . &   695.000 &         . &   693.000 &         . \\  
+$F$-stat &     4.606 &         &     2.226 &         &    12.713 &         &     5.861 &        \\ 
+$R^2$ &     0.033 &         &     0.040 &         &     0.191 &         &     0.227 &        \\ 
+Observations &   695 &         &   233 &         &   695  &         &   693  &        \\ 
 \bottomrule \end{tabular}
