--- a/output/abccarecnlsy_invariance_si30y_inc_trans_pub_smale.tex
+++ b/output/abccarecnlsy_invariance_si30y_inc_trans_pub_smale.tex
@@ -3,13 +3,13 @@
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
 S & -9,163.289 &     0.970 & -10,900.00 &     0.840 & -9,183.792 &     0.970 & -10,100.00 &     0.805 \\  
 Mother's Education &  1,079.304 &     0.060 &  1,780.950 &     0.125 &  1,357.454 &     0.100 &  2,589.214 &     0.120 \\  
-PIAT (5-7) &         . &         . &         . &         . &  -231.170 &     0.740 &   134.292 &     0.230 \\  
-Education (30) &         . &         . &         . &         . &   -94.621 &     0.585 &     8.667 &     0.495 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.078 &     0.340 &    -0.115 &     0.935 \\  
-Cognitive &         . &         . & -1,522.362 &     0.895 &         . &         . & -2,681.798 &     0.880 \\  
-Non Cognitive &         . &         . &   219.476 &     0.330 &         . &         . &   179.781 &     0.360 \\  
+PIAT (5-7) &         &         &         &         &  -231.170 &     0.740 &   134.292 &     0.230 \\  
+Education (30) &         &         &         &         &   -94.621 &     0.585 &     8.667 &     0.495 \\  
+Labor Income (21) &         &         &         &         &     0.078 &     0.340 &    -0.115 &     0.935 \\  
+Cognitive &         &         & -1,522.362 &     0.895 &         &         & -2,681.798 &     0.880 \\  
+Non Cognitive &         &         &   219.476 &     0.330 &         &         &   179.781 &     0.360 \\  
 Constant & -1,768.141 &     0.585 & -7,509.722 &     0.810 & 17,402.359 &     0.330 & -27,900.00 &     0.770 \\  \\ \midrule
-$F$-stat &     1.740 &         . &     0.682 &         . &     1.050 &         . &     0.530 &         . \\  
-$R^2$ &     0.012 &         . &     0.058 &         . &     0.019 &         . &     0.095 &         . \\  
-Observations &   201.000 &         . &    79.000 &         . &   200.000 &         . &   203.000 &         . \\  
+$F$-stat &     1.740 &         &     0.682 &         &     1.050 &         &     0.530 &        \\
+$R^2$ &     0.012 &         &     0.058 &         &     0.019 &         &     0.095 &        \\
+Observations &   201 &         &    79 &         &   200 &         &   203  &        \\
 \bottomrule  \end{tabular}
