--- a/output/abccarecnlsy_invariance_si34y_bmi_smale.tex
+++ b/output/abccarecnlsy_invariance_si34y_bmi_smale.tex
@@ -3,13 +3,13 @@
  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  & Estimate  & $p$-value  \\  \midrule
 S &     2.327 &     0.025 &     2.812 &     0.065 &     1.822 &     0.100 &     3.135 &     0.060 \\  
 Mother's Education &    -0.180 &     0.700 &     0.347 &     0.320 &    -0.029 &     0.515 &     0.518 &     0.180 \\  
-PIAT (5-7) &         . &         . &         . &         . &     0.080 &     0.085 &     0.236 &     0.050 \\  
-Education (30) &         . &         . &         . &         . &     0.161 &     0.300 &     0.399 &     0.270 \\  
-Labor Income (21) &         . &         . &         . &         . &     0.000 &     0.080 &     0.000 &     0.020 \\  
-Cognitive &         . &         . &    -1.270 &     0.835 &         . &         . &    -2.362 &     0.970 \\  
-Non Cognitive &         . &         . &     0.188 &     0.385 &         . &         . &     0.482 &     0.265 \\  
+PIAT (5-7) &         &         &         &         &     0.080 &     0.085 &     0.236 &     0.050 \\  
+Education (30) &         &         &         &         &     0.161 &     0.300 &     0.399 &     0.270 \\  
+Labor Income (21) &         &         &         &         &     0.000 &     0.080 &     0.000 &     0.020 \\  
+Cognitive &         &         &    -1.270 &     0.835 &         &         &    -2.362 &     0.970 \\  
+Non Cognitive &         &         &     0.188 &     0.385 &         &         &     0.482 &     0.265 \\  
 Constant &    30.350 &     0.000 &    25.170 &     0.000 &    18.323 &     0.010 &    -6.799 &     0.600 \\ \\ \midrule  
-$F$-stat &     2.828 &         . &     3.562 &         . &     3.171 &         . &     3.867 &         . \\  
-$R^2$ &     0.050 &         . &     0.142 &         . &     0.096 &         . &     0.260 &         . \\  
-Observations &   283.000 &         . &    79.000 &         . &   285.000 &         . &   280.000 &         . \\  
+$F$-stat &     2.828 &         &     3.562 &         &     3.171 &         &     3.867 &         \\
+$R^2$ &     0.050 &         &     0.142 &         &     0.096 &         &     0.260 &         \\
+Observations &   283 &         &    79 &         &   285 &         &   280 &         \\
 \bottomrule \end{tabular}
