edits to C.5 and C.6, formatting edits to stand alone and those appendices

--- a/abc_methodologystandalone.tex
+++ b/abc_methodologystandalone.tex
@@ -234,9 +234,9 @@ We need to show that
 
 \noindent To investigate the relevance of endogeneity, we follow \citet{Heckman_Pinto_etal_2013_PerryFactor} and assume that, in the experimental sample, $\varepsilon_{j,t}^d$ obeys a factor structure with an associated set of measures $\bm{M}_{t}^d$. Formally, let the system be
 
-\begin{eqnarray}\label{eq:msystemmain}
-\bm{M}_{t}^d &= \bm{\lambda}^d \bm{\theta}_{t}^d +  \bm{\upsilon}_t^d   \\ \nonumber
-\varepsilon_{t}^d &=\bm{\beta}^d \bm{\theta}_{t}^d + \bm{\omega}_{t}^d,  \\ 
+\begin{eqnarray}\label{eq:sa-msystemmain}
+\bm{M}_{t}^d &= \bm{\lambda}^d \bm{\theta}_{t}^d +  \bm{\upsilon}_t^d   \nonumber \\ 
+\varepsilon_{t}^d &=\bm{\beta}^d \bm{\theta}_{t}^d + \bm{\omega}_{t}^d, 
 \end{eqnarray}
 
 \noindent where $\bm{\theta}^d  \independent \bm{\upsilon}_{t}^d,  \bm{\omega}_{t}^d$ and $\bm{\upsilon_{t}^d} \independent \bm{\omega_{t}^d}$ for all $t \in \{0, \ldots, T \}$.\\
