--- a/abc_comprehensivecba_appendix.tex
+++ b/abc_comprehensivecba_appendix.tex
@@ -3,6 +3,7 @@
 \input{output/mainstatistics}
 
 \externaldocument{abc_methodologystandalone}
+\externaldocument{abc_comprehensivecba}
 \pagenumbering{roman}
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
