added couple of sentences about weights

--- a/abc_methodologystandalone.tex
+++ b/abc_methodologystandalone.tex
@@ -190,7 +190,7 @@ For individual $i$ in the experimental treatment or control groups, an individua
 \sqrt{\left( \bm{X}^{d}_{i,t} - \bm{X}_{j(i),t} \right)^{\prime} {\left( \bm{\Sigma}^d\right)}^{-1} \left(\bm{X}^{d}_{i,t} - \bm{X}_{j(i),t} \right)} < \epsilon \text{ for } \quad d \in \ \{0,1\}, \ \ t \in \{0,\dots,T\}
 \end{equation}
 
-\noindent where $\epsilon$ is arbitrarily small.\footnote{In practice, we set $\epsilon = 1$, but we try a range of values between .5 and 3 finding little sensitivity. The full set of the results we produce in the paper for multiple values in the interval [.5,3] is available under request.} $j(i) \in F_0$, for $t \leq t^{\ast}$, where $F_0$ is the index set in the auxiliary sample and $\bm{\Sigma}^d$ is the covariance matrix of $\bm{X}$ in the experimental sample group $d$.\footnote{In practice, the variables in $\bm{X}^{d}_{i,t}$ that we use to find the control- and treatment-group counterparts according to \eqref{eq:ingrownnail} and the variables that we use to fit the dynamic relationships differ. We do so because the available variables across different non-experimental samples differ---recall that we use different non-experimental samples at different stages of the life cycle given data restrictions. We construct the matches using a common set of variables, and then exploit information on additional variables when predicting at different stages of the life cycle. We present sensitivity to using different variables to find control- and treatment-group counterparts in Appendix~\ref{appendix:match} and sensitivity using different variables to fit the dynamic relationships in Appendix~\ref{appendix:senspredict}.}\\
+\noindent where $\epsilon$ is arbitrarily small.\footnote{In practice, we set $\epsilon = 1$, but we try a range of values between .5 and 3 finding little sensitivity. The full set of the results we produce in the paper for multiple values in the interval [.5,3] is available under request.} $j(i) \in F_0$, for $t \leq t^{\ast}$, where $F_0$ is the index set in the auxiliary sample and $\bm{\Sigma}^d$ is the covariance matrix of $\bm{X}$ in the experimental sample group $d$.\footnote{In practice, the variables in $\bm{X}^{d}_{i,t}$ that we use to find the control- and treatment-group counterparts according to \eqref{eq:ingrownnail} and the variables that we use to fit the dynamic relationships differ. We do so because the available variables across different non-experimental samples differ---recall that we use different non-experimental samples at different stages of the life cycle given data restrictions. We construct the matches using a common set of variables, and then exploit information on additional variables when predicting at different stages of the life cycle. We present sensitivity to using different variables to find control- and treatment-group counterparts in Appendix~\ref{appendix:match} and sensitivity using different variables to fit the dynamic relationships in Appendix~\ref{appendix:senspredict}.} If the inequality in \eqref{eq:ingrownnail} does not hold, we assign to individual $j(i)$ a weight of 0. If it holds, we weight the individual with the inverse value of the left-hand side of \eqref{eq:ingrownnail}
 \end{algorithm}
 \doublespacing
 
@@ -261,10 +261,10 @@ We need to show that
 		\includegraphics[width=\textwidth]{output/abccare_nfactor.eps}
 \end{subfigure}
 \footnotesize \justify
-Note: Panels (a) displays a factor score estimated based on the measurement system in \eqref{eq:msystem} and measures of IQ at ages 2, 3, 4, 5, 7, and 8 (cognitive skill). Panel (b) displays an analogous exercise using measures measures of somatization, hostility, depression, and a global mental health index at age 21 (non-cognitive skill). Both measures of skills are standardized to a mean of $0$ and a standard deviation of $1$. ``Less'' in the factor measuring non-cognitive skills is ``positive'' given the measures we rely on to construct it. The mean difference between treatment and control is displayed below each panel, with standard error in parentheses. Standard errors are based on the bootstrap empirical distribution.
+Note: Panels (a) displays a factor score estimated based on the measurement system in \eqref{eq:sa-msystemmain} and measures of IQ at ages 2, 3, 4, 5, 7, and 8 (cognitive skill). Panel (b) displays an analogous exercise using measures measures of somatization, hostility, depression, and a global mental health index at age 21 (non-cognitive skill). Both measures of skills are standardized to a mean of $0$ and a standard deviation of $1$. ``Less'' in the factor measuring non-cognitive skills is ``positive'' given the measures we rely on to construct it. The mean difference between treatment and control is displayed below each panel, with standard error in parentheses. Standard errors are based on the bootstrap empirical distribution.
 \end{figure}
 
-\noindent Our tests of Assumption~\ref{ass:summary} display little sensitivity to controlling for $\bm{\theta}_{t}^d$. When constructing a system analogous to \eqref{eq:msystemmain} in the non-experimental sample to account for endogeneity, we also find little sensitivity to accounting for endogeneity when testing Assumption~\ref{ass:invariance} and when constructing predictions. These tests indicate that  $\left( \bm{X}_{t}, \bm{B} \right)$ are adequate measured inputs for the output $Y_{j,t}$ and that endogeneity is not a first order concern for our predictions (see Appendix~\ref{app:invariance} and Appendix~\ref{app:endogeneity}).\\
+\noindent Our tests of Assumption~\ref{ass:summary} display little sensitivity to controlling for $\bm{\theta}_{t}^d$. When constructing a system analogous to \eqref{eq:sa-msystemmain} in the non-experimental sample to account for endogeneity, we also find little sensitivity to accounting for endogeneity when testing Assumption~\ref{ass:invariance} and when constructing predictions. These tests indicate that  $\left( \bm{X}_{t}, \bm{B} \right)$ are adequate measured inputs for the output $Y_{j,t}$ and that endogeneity is not a first order concern for our predictions (see Appendix~\ref{app:invariance} and Appendix~\ref{app:endogeneity}).\\
 
 \noindent \textbf{[JLG: After this, I suggest to continue with what we currently have for Sections 6.3 to 6.6.]}
 
