fixed little mistake

--- a/abc_methodologystandalone.tex
+++ b/abc_methodologystandalone.tex
@@ -21,9 +21,7 @@
 \setcounter{section}{5}
   \section{Predicting and Monetizing Life-cycle Costs and Benefits} \label{section:cbamethodology}
 
-\noindent \textbf{[JLG: Professor, I'm proposing major changes to Section 6. The version that we left when you went to China was imprecise, in my opinion. It read too much as a cookbook and it didn't provide the reader with enough context for the proof of the Theorem to be straightforward, as we claim. With the changes I made, it is possible to derive the implications of each assumption after stating it and then the Theorem follows. I'm providing a proof based on deriving these implications. I look forward to your comments. Given that the changes are major, I want to first propose them via this stand alone document.]}
-
-\section{Predicting and Monetizing Life-cycle Costs and Benefits} \label{section:cbamethodology}
+\noindent \textbf{[JLG: Professor, I'm proposing major changes to Section 6. The version that we left when you went to China was imprecise, in my opinion. It read too much as a cookbook and it didn't provide the reader with enough context for the proof of the Theorem to be straightforward, as we claim. With the changes I made, it is possible to derive the implications of each assumption after stating it and then the Theorem follows. I'm providing a proof based on deriving these implications. I look forward to your comments. Given that the changes are major, I want to first propose them via this stand alone document.]} \\
 
 \noindent A central focus of this paper is summarizing the multiple benefits of ABC/CARE using benefit/cost and rate of return analyses. This requires using non-experimental data to predict the costs and benefits of the program over the life cycle after the measurement phase of the study ends. This is a fundamental problem in empirical social science that has been addressed in the literature in multiple ways.\footnote{See, e.g., \cite{Heckman_Lochner_ea_2006_HEE}. \citet{Heckman_Moon_etal_2010_RateofReturn} use a variety of methods to predict future labor income in the Perry Preschool Project. The various methods are in general agreement. They fit a variety of panel data labor income dynamics models and project future labor income with them.} This section explains our strategy for using multiple data sources to predict the out-of-sample life-cycle costs and benefits of education, labor income, transfer income, crime, and health. Our approach builds on and extends the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show that, in a similar setting to ours, the effect of treatment on outcomes operates through its effects on inputs in a stable production function rather than through shifts in the production function. We report a similar finding for ABC/CARE.\\
 
@@ -114,7 +112,7 @@ Y_{j,t}        &=& \left( 1 - D \right) Y_{j,t}^0    + \left( D \right) Y_{j,t}^
 \bm{X}_{t} &=& \left( 1 - D \right) \bm{X}_{t}^0 + \left( D \right) \bm{X}_{t}^1. \label{eq:countersystem}
 \end{eqnarray}
 
-\noindent The fact that $D = R$ allows us to compute statistics of the distribution of $Y_{j,t}^d$ (i.e. $Y_{j,t}^d$ when fixing to treatment status ($d$) by conditioning to the space in which $D$ takes the value $d$.\footnote{Randomization allows us to do this, but \textit{fixing and conditioning are fundamentally different concepts}. See \citet{Heckman_Pinto_2015_EconometTheory} for a discussion.}\\
+\noindent The fact that $D = R$ allows us to compute statistics of the distribution of $Y_{j,t}^d$ (i.e. $Y_{j,t}^d$ when fixing to treatment status ($d$)) by conditioning to the space in which $D$ takes the value $d$.\footnote{Randomization allows us to do this, but \textit{fixing and conditioning are fundamentally different concepts}. See \citet{Heckman_Pinto_2015_EconometTheory} for a discussion.}\\
 
 \noindent We provide a general framework under which we can identify $\mathbb{E} \left[ Y_{j,t}^d | \bm{X}_{t}^d = \bm{x}_t^d, \bm{B} = \bm{b}  \right]$ in $t > t^*$ using non-experimental samples. We use two economically-motivated assumptions on the production function in \eqref{eq:outcome} and a set of auxiliary assumptions to identify our out-of-sample prediction. This allows us to predict long-term treatment effects. Our framework has testable implications, which we provide as well.\\
 
